--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>ifix ps free Exploit</title>
 <style>
 html, body {
-background-image: url("img.jpg");
+background-image: /"img.jpg");
 background-size: 100%;
 background-repeat: no-repeat;
 background-color: #24272b;
