--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <title>ifix ps free Exploit</title>
 <style>
 html, body {
-background-image: /"img.jpg");
-background-size: 100%;
-background-repeat: no-repeat;
-background-color: #24272b;
-color: white;
-text-align: center;
-margin: 0px;
-overflow: hidden;
+background-image: url('img.jpg');
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-color: #24272b;
+    color: white;
+    text-align: center;
+    overflow: hidden;
 }
 
 h1 {
