--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 </html>
 <title>ifix ps free Exploit</title>
 <style>
-html, body {
+html,  {
 background-image: url('img.jpg');
     background-position: center;
     background-size: cover;
